# bxai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: examples.ipynb
src/bxai/: __init__.py
src/bxai/_engines/: __init__.py  beta_binomial.py  normal_ig.py
src/bxai/_utils/: __init__.py  hdi.py  types.py  validation.py
src/bxai/explanation/: __init__.py  baylime.py
src/bxai/parametric/: __init__.py  bart_importance.py  correlation.py  shrinkage_pip.py
src/bxai/selection/: __init__.py  boruta_shap.py  permutation.py  stability.py
tests/: conftest.py  test_correlation.py  test_engines.py  test_explanation.py  test_hyperparameter_validation.py  test_parametric.py  test_selection.py  test_stability.py
