[project]
name = "bxai"
version = "0.1.0"
description = "Bayesian Feature Attribution and XAI Suite"
authors = [
    { name = "sam-tritto", email = "59342606+sam-tritto@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.0.0",
    "shap>=0.40.0",
    "lightgbm>=3.3.0",
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.6.0"]
catboost = ["catboost>=1.0.0"]
mcmc = [
    "pymc>=5.0.0",
    "pymc-bart>=0.5.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
