[project]
name = "bxai"
version = "0.1.0"
description = "Bayesian Feature Attribution and XAI Suite"
authors = [
    { name = "sam-tritto", email = "59342606+sam-tritto@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=1.6.0"]
catboost = ["catboost>=1.0.0"]
mcmc = [
    "pymc>=5.0.0",
    "pymc-bart>=0.5.0",
]
boruta = [
    "shap>=0.40.0",
    "lightgbm>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]

# Run the entire tests/ package without specifying a path on the CLI.
testpaths = ["tests"]

# Default CLI flags applied on every run:
#   -ra        — short summary of all non-passing outcomes
#   --tb=short — compact tracebacks (full detail still shown on failure)
#   --strict-markers — any undeclared @pytest.mark.X is an error, not a warning
addopts = "-ra --tb=short --strict-markers"

# Custom markers — declare here to avoid PytestUnknownMarkWarning.
# Add new markers in the form: "name: description".
markers = [
    "slow: marks tests that are slow to run (deselect with -m 'not slow')",
    "mcmc: marks tests that require PyMC / MCMC backend (skipped in minimal CI)",
]

# Suppress known noisy third-party warnings that are not actionable.
filterwarnings = [
    # shap internals — PendingDeprecationWarning about Colormap helpers
    "ignore::PendingDeprecationWarning:shap",
    # PyMC / ArviZ version-skew warnings — not a bxai concern
    "ignore::FutureWarning:pymc",
    "ignore::FutureWarning:arviz",
]
