[project]
name = "bxai"
version = "0.1.2"
description = "Bayesian Feature Selection and Attribution Suite"
authors = [
    { name = "sam-tritto", email = "59342606+sam-tritto@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "bayesian",
    "feature-selection",
    "explainable-ai",
    "lime",
    "boruta",
    "shap",
    "horseshoe-prior",
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sam-tritto/bxai"
Repository = "https://github.com/sam-tritto/bxai"
Documentation = "https://github.com/sam-tritto/bxai#readme"

[project.optional-dependencies]
xgboost = ["xgboost>=1.6.0"]
catboost = ["catboost>=1.0.0"]
mcmc = [
    "pymc>=5.0.0",
    "pymc-bart>=0.5.0",
]
boruta = [
    "shap>=0.40.0",
    "lightgbm>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]

# Run the entire tests/ package without specifying a path on the CLI.
testpaths = ["tests"]

# Default CLI flags applied on every run:
#   -ra        — short summary of all non-passing outcomes
#   --tb=short — compact tracebacks (full detail still shown on failure)
#   --strict-markers — any undeclared @pytest.mark.X is an error, not a warning
addopts = "-ra --tb=short --strict-markers"

# Custom markers — declare here to avoid PytestUnknownMarkWarning.
# Add new markers in the form: "name: description".
markers = [
    "slow: marks tests that are slow to run (deselect with -m 'not slow')",
    "mcmc: marks tests that require PyMC / MCMC backend (skipped in minimal CI)",
]

# Suppress known noisy third-party warnings that are not actionable.
filterwarnings = [
    # shap internals — PendingDeprecationWarning about Colormap helpers
    "ignore::PendingDeprecationWarning:shap",
    # PyMC / ArviZ version-skew warnings — not a bxai concern
    "ignore::FutureWarning:pymc",
    "ignore::FutureWarning:arviz",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B904", # raise from None for clean error chaining
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "pandas.*",
    "sklearn.*",
    "shap.*",
    "lightgbm.*",
    "xgboost.*",
    "catboost.*",
    "pymc.*",
    "pymc_bart.*",
    "arviz.*",
    "joblib.*",
    "matplotlib.*",
    "pytensor.*",
]
ignore_missing_imports = true

